<resources>
    <string name="app_name">Бетонир Lite</string>
    <string name="action_settings">В разработке</string>
    <string name="title_activity_navi_fun">Тип фундамента</string>
    <string name="title_activity_fun1">Тип 1</string>
    <string name="action_nastroi">На главную</string>
    <string name="action_email">Тип фундамента</string>
    <string name="action_info">О кнопках</string>
    <string name="ress">Сброс результата</string>
    <string name="vixod">Выход</string>
    <string name="title_activity_fun2">Тип 2</string>
    <string name="title_activity_fun3">Тип 3</string>
    <string name="title_activity_fun4">Тип 4</string>
    <string name="title_activity_fun5">Тип 5</string>
    <string name="title_activity_fun6">Тип 6</string>
    <string name="title_activity_fun7">Тип 7</string>
    <string name="title_activity_fun8">Тип Периметр</string>
    <string name="activity_web_beton">Поиск бетона ...</string>
    <string name="armatura">Арматуру запрещено соединять в местах максимального напряжения стержней
        и зонах приложения (концентрированного) нагрузки на них.</string>
    <string name="activity_web_armatura">О бетоне</string>
    <string name="title_activity_perimetr">Тип - периметр</string>
    <string name="one">ПОИСК</string>
    <string name="three">Данных пока нет</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="my_tb_title">Бетонир Lite</string>
    <string name="web_beton">Поиск бетона ...</string>
    <string name="my_fundamenti">Форма фундамента</string>
    <string name="web_armatura">Поиск арматуры ...</string>
    <string name="web_plus">Сообщение</string>
    <string name="title_activity_pris_8">Пристройка - периметр</string>
    <string name="title_activity_pris_1">Пристройка 1</string>
    <string name="title_activity_pris_2">Пристройка 2</string>
    <string name="title_activity_pris_3">Пристройка 3</string>
    <string name="title_activity_pris_4">Пристройка 4</string>
    <string name="title_activity_pris_5">Пристройка 5</string>
    <string name="title_activity_kolona2">Восьмигранник</string>
    <string name="title_activity_kolona1">Цилиндр</string>
    <string name="Beton">Бетон (м3):</string>
    <string name="cena">Цена (бетон):</string>
    <string name="cenaarmatury">Стоимость арматуры:</string>
    <string name="razmer_a">Размер A:</string>
    <string name="razmer_b">Размер B:</string>
    <string name="wirina_fundamenta">Ширина фундамента:</string>
    <string name="glubina_fundamenta">Глубина фундамента:</string>
    <string name="cena_betona_za_m3">Стоимость бетона (за куб):</string>
    <string name="ryadi_armaturi_a">Количество рядов арматуры (А):</string>
    <string name="naxlest">Нахлест арматуры(%):</string>
    <string name="diametr_prodolnoy_arm">A - диаметр продольной арматуры:</string>
    <string name="diametr_arm_prosto">Диаметр арматуры:</string>
    <string name="diametr_obvyazki">B - диаметр арматуры обвязки:</string>
    <string name="wag_obvyazki">C - шаг обвязки:</string>
    <string name="cena_armaturi_za_kg">Стоимость арматуры (за кг):</string>
    <string name="cena_armaturi_vsya">Стоимость арматуры:</string>
    <string name="Perimetr_fundamenta">Периметр фундамента P:</string>
    <string name="visota_koloni">Высота колонны:</string>
    <string name="diametr_koloni">Диаметр колонны D:</string>
    <string name="storona_a_koloni">Длина стороны А:</string>
    <string name="storona_b_koloni">Длина стороны B:</string>
    <string name="tolshina_pliti">Толщина плиты перекрытия:</string>
    <string name="sloi_armaturi">Количество слоев арматуры:</string>
    <string name="wag_ukladki">n - шаг укладки арматуры:</string>
    <string name="radius_r">Радиус R:</string>
    <string name="fundament_menu">Фундамент</string>
    <string name="dastroyka_menu">Достройка</string>
    <string name="plita_menu">Плита</string>
    <string name="kolonna_menu">Колонна</string>
    <string name="razmer_c">Размер C:</string>
    <string name="dlina_fundamenta">Длина фундамента А:</string>
    <string name="arm1">Арматуру запрещено соединять</string>
    <string name="arm2">в местах максимального</string>
    <string name="arm3">напряжения стержней и зонах</string>
    <string name="arm4">приложения концентрированой</string>
    <string name="arm5">нагрузки на них.</string>
    <string name="Information">Информация</string>
    <string name="Poisk">Поиск материалов</string>
    <string name="Instruktion">Инструкция</string>
    <string name="vvedite_znachenie">Введите значение для кнопки</string>
    <string name="pervoe_vnesenie_dannix">Первое внесение данных</string>
    <string name="nagmite_ok">(нажмите: Ок)</string>
    <string name="vvedite_cenu">Введите свою цену</string>
    <string name="vvedite_wag">Введите свой шаг</string>
    <string name="eto_standart">Это стандартный размер</string>
    <string name="eto_fiks">Это фиксированое значение</string>
    <string name="obnulit_danie">Обнулить данные?</string>
    <string name="moget_plata">Может взиматься плата за интернет трафик</string>
    <string name="za_internet">за интернет трафик</string>
    <string name="fire">ok</string>
    <string name="cancel">no</string>
    <string name="soglasen">Согласен</string>
    <string name="otmena">Отмена</string>
    <string name="title_activity_kolona3">Прямоугольная колона</string>
    <string name="tema_pisma">Тема письма:</string>
    <string name="soobwenie">Сообщение:</string>
    <string name="vibirite_kartinku">  Приложить картинку, фото  </string>
    <string name="est_idea">У меня есть идея</string>
    <string name="xochu_predlogit">Хочу предложить новую форму фундамента...</string>
    <string name="betonir_start">БЕТОНИР</string>
    <string name="armatura_m_kg">Арматура: A (м/кг):</string>
    <string name="B_m_kg">Арм.:B (м/кг):</string>
    <string name="arm_m_kg_bes">Арматура (м/кг):</string>
    <string name="bet">Бетон</string>
    <string name="arm">Арматура</string>
    <string name="navigation_drawer_open">123</string>
    <string name="navigation_drawer_close">456</string>
    <string name="pro">Версия Pro</string>
    <string name="armr2">Вносить свои значения</string>
    <string name="armr1">для кнопок</string>
    <string name="armr3">доступно в версии</string>
    <string name="kirpish">Кирпич (расчет)</string>
    <string name="kirp_bar">Расчет кирпича</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="arm111">Еще приложения</string>
    <string name="arm222">Поделится</string>
</resources>